# lfgBot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tables.sql
.sqlx/: query-35dd40104eb4a39061ff35fc4453db4d182751abfd8ab0e58d6921b6687c314f.json  query-43af96ec2f601ae881120780f54197729cdf8f7715eb8a6500527e6171201012.json  query-880d1fff9b6843fbc9ac32a7af7015101fe36e6c6520cf0d0a00a9be6271f3d3.json  query-e7767525956440a5c3357ed7226b9be767601c81d4c769b9271f08ba1e1554bf.json
src/: event.rs  main.rs
