[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = { version= "0.6.1"}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "macros",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
dotenv = "0.15.0"
regex = "1.11.1"
redis = { version = "0.29.5", features = ["tokio-comp", "json"]}


